--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -128,13 +128,24 @@
 
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Tabela</mat-label>
-            <input matInput [formControl]="tabelaAutoCompleteControl" [matAutocomplete]="auto4" type="text">
+            <input matInput (ngModelChange)="carregaProdutosPorTabelaAndOperadoraAndAdministradoraAndEstadoAndCategoriaAndMEI()" [formControl]="tabelaAutoCompleteControl" [matAutocomplete]="auto4" type="text">
             <mat-autocomplete autoActiveFirstOption #auto4="matAutocomplete" [displayWith]="tabelaDisplayFn">
               <mat-option *ngFor="let tabela of tabelaFilteredOptions | async" [value]="tabela">
                 {{tabela.nome}}
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
+
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Produto</mat-label>
+            <input matInput [formControl]="produtoAutoCompleteControl" [matAutocomplete]="auto5" type="text">
+            <mat-autocomplete autoActiveFirstOption #auto5="matAutocomplete" [displayWith]="produtoDisplayFn">
+              <mat-option *ngFor="let produto of produtoFilteredOptions | async" [value]="produto">
+                {{produto.nome}}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+
           <div>
             <mat-form-field appearance="outline" style="width: 33%">
               <mat-label>R$ 0 a 18</mat-label>
