--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container" style="width: 100%">
-  <div style="width: 100%">
+  <div>
     <mat-card>
       <mat-card-title>
       <span>
@@ -16,28 +16,73 @@
       <mat-card-content>
         <mat-table [dataSource]="dataSourceOpcao" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="id">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaOpcao(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="nome">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaOpcao(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.id}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="estado">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaOpcao(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.estado.sigla}} </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="operadora">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaOpcao(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
+          <ng-container matColumnDef="nomeTabela">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Tabela </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.tabela.nome}} </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="administradora">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-            <mat-cell *matCellDef="let tabela" (click)="selecionaOpcao(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
+          <ng-container matColumnDef="nomeProduto">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Produto </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.produto.nome}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="acomodacao">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Acomodacao </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.acomodacao}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="coparticipacao">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Coparticipacao </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.coparticipacao ? 'Com' : 'Sem'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor0a18anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 0 a 18 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor0a18anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor19a23anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 19 a 23 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor19a23anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor24a28anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 24 a 28 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor24a28anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor29a33anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 29 a 33 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor29a33anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor34a38anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 34 a 38 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor34a38anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor39a43anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 39 a 43 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor39a43anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor44a48anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 44 a 48 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor44a48anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor49a53anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 49 a 53 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor49a53anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor54a58anos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 54 a 58 </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor54a58anos | currency: 'BRL'}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="valor59ouMaisAnos">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> R$ 59 ou Mais </mat-header-cell>
+            <mat-cell *matCellDef="let opcao" (click)="selecionaOpcao(opcao)" class="mouse-pointer"> {{opcao.valor59ouMaisAnos | currency: 'BRL'}} </mat-cell>
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -50,7 +95,7 @@
 
   <div *ngIf="opcaoSelecionada" style="width: 20px"></div>
 
-  <div *ngIf="opcaoSelecionada" style="flex-direction: column">
+  <div *ngIf="opcaoSelecionada" style="flex-direction: column; width: 70%">
     <div>
       <mat-card>
         <mat-card-title>
