--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -192,7 +192,7 @@
       <mat-accordion multi>
         <div class="flex-container" style="flex-direction: row; width: 100%; margin-top: 5px">
           <div style="width: 50%">
-            <mat-expansion-panel>
+            <mat-expansion-panel #relacionamentoProduto [disabled]="!this.tabelaEditando?.operadora?.id">
               <mat-expansion-panel-header>
                 <mat-panel-title>
                   <mat-icon>book</mat-icon>
@@ -258,7 +258,7 @@
             </mat-expansion-panel>
           </div>
           <div style="width: 50%; padding-left: 10px">
-            <mat-expansion-panel>
+            <mat-expansion-panel #relacionamentoEntidade>
               <mat-expansion-panel-header>
                 <mat-panel-title>
                   <mat-icon>groups</mat-icon>
